change parent of CustomUserDetails for more clean code