@@ -1,65 +1,17 @@
 package com.projectsav.client_app.security;
 
-import com.projectsav.client_app.model.User;
-import lombok.AllArgsConstructor;
 import lombok.Getter;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.User;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
-@AllArgsConstructor
-public class CustomUserDetails implements UserDetails {
-    private String id;
-    private String username;
-    private String password;
-    private Collection<? extends GrantedAuthority> authorities;
+public class CustomUserDetails extends User {
+    private final String id;
 
-    public static CustomUserDetails build(User user) {
-        return new CustomUserDetails(
-                user.getId(),
-                user.getLogin(),
-                user.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().toString()))
-        );
+    public CustomUserDetails(String username, String password, String id) {
+        super(username, password, List.of());
+        this.id = id;
     }
 
-
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return authorities;
-    }
-
-    @Override
-    public String getPassword() {
-        return password;
-    }
-
-    @Override
-    public String getUsername() {
-        return username;
-    }
-
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return true;
-    }
 }
